--- a/CodeQuest_Frontend/package.json
+++ b/CodeQuest_Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-management-system-frontend",
+  "name": "codequest_frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
