--- a/CodeQuest_Backend/package.json
+++ b/CodeQuest_Backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "generateDoc": "node swagger.js"
+    "generateDoc": "node swagger.js",
+     "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
